# humat

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: comparison.rs  human_format.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_humat.rs
src/: format.rs  lib.rs  unit.rs
src/format/: preset.rs
tests/: general.rs  test.rs  test_no_std.rs
